2001-04-15  Yuuichi Teranishi  <teranisi@gohome.org>

	* shimbun/sb-airs.el (shimbun-airs-coding-system): Fixed redundant
	definition.
	* shimbun/sb-yomiuri.el (shimbun-yomiuri-coding-system): Ditto.
	* shimbun/sb-wired.el (shimbun-wired-coding-system): Ditto.
	* shimbun/sb-sponichi.el (shimbun-sponichi-coding-system): Ditto.
	* shimbun/sb-netbsd.el (shimbun-netbsd-coding-system): Ditto.
	* shimbun/sb-cnet.el (shimbun-cnet-coding-system): Ditto.
	* shimbun/sb-bbdb-ml.el (shimbun-bbdb-ml-coding-system): Ditto.

	* shimbun/sb-mew.el: Fixed.

2001-04-13  Yuuichi Teranishi  <teranisi@gohome.org>

	* shimbun/sb-xemacs.el (shimbun-get-headers): Undo last change.

	* shimbun/sb-airs.el (shimbun-get-headers): Ditto.

	* shimbun/shimbun.el (shimbun-retrieve-url): Copy buffer content only
	if it is not the work buffer of w3m.

	* shimbun/sb-xemacs.el (shimbun-get-headers): Retrieve header
	to the temp buffer.

	* shimbun/sb-airs.el (shimbun-get-headers): Ditto.

	* shimbun/shimbun.el (shimbun-retrieve-url-buffer):
	Return an empty buffer when `w3m-retrieve' returns nil.

2001-04-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-about-history): Show a hitrory tree (incompleted).
	(w3m-exec): Put a title string into the history structure.

2001-04-12  Akihiro Arisawa  <ari@mbf.sphere.ne.jp>

	* shimbun/sb-airs.el (shimbun-get-headers): Stop when
	`shimbun-search-id' returns non-nil.

2001-04-12  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-about-db-history): Change the format on display.

2001-04-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-om.el (w3m-icon-directory): Define it as the constant nil
	to avoid byte-compile warnings when compiling.
	* w3m.el (w3m-icon-directory): Undo last change.

2001-04-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-icon-directory): Hide the actual function name
	`locate-data-directory' for old Emacsen to avoid byte-compile
	warnings.

	* w3m-om.el (w3m-om-define-missing-widgets): New function.